--- a/render.yaml
+++ b/render.yaml
@@ -7,4 +7,4 @@ services:
     plan: free
     envVars:
       - key: GOOGLE_APPLICATION_CREDENTIALS
-        value: server/google-credentials.json
+        value: /etc/secrets/google_credentials_json
